fixed contrast issue with footer text

--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -1,6 +1,6 @@
 .footer {
 	background: #101010;
-	color: #4a4a4a;
+	color: #696969;
 }
 
 .footer__section {
